Fixing panels gap

--- a/AlgoPuzzles/wwwroot/css/site.less
+++ b/AlgoPuzzles/wwwroot/css/site.less
@@ -199,3 +199,7 @@ body {
 .list-group-item {
     padding: 5px 10px;
 }
+
+.panel-group {
+    .panel + .panel { margin-top: 10px; }
+}
